Fix(oc-signage): フッタが見切れている問題を修正

--- a/oc-signage-ngw.html
+++ b/oc-signage-ngw.html
@@ -19,7 +19,7 @@
 			<iframe src="http://www.osakac.ac.jp/admission/opencampus/"></iframe>
 			<!---->
 			<footer>
-				<span style="color: green;">by OdenTools</span> - 情報学科の学生による何でも開発プロジェクト
+				<span style="color: green;">by OdenTools</span> - 情報学科学生による何でも開発チーム
 			</footer>
 		</div>
 	</body>
