--- a/oc-signage-sjn.html
+++ b/oc-signage-sjn.html
@@ -19,7 +19,7 @@
 			<iframe src="signage.html#?route_id=5"></iframe>
 			<!---->
 			<footer>
-				<span style="color: green;">by OdenTools</span> - 情報学科の学生による何でも開発プロジェクト
+				<span style="color: green;">OdenTools</span> - 情報学科学生による開発プロジェクト
 			</footer>
 		</div>
 	</body>
