--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8">
 		<title>大阪電気通信大学 バス時刻表</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+		<!-- Icon resources - General -->
+		<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+		<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+		<!-- Icon resources - Chrome -->
+		<link rel="icon" sizes="192x192" href="/designs/icon_192.png" />
+		<link rel="icon" sizes="64x64" href="/designs/icon_64.png" />
+		<!-- Icon resources - iOS Safari -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/designs/icon_180.png" />
+		<link rel="apple-touch-icon" href="/designs/icon_64.png" />
+		<!---->
 		<link rel="stylesheet" href="css/mobile.css" />
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script src="js/jquery-1.11.3.min.js"></script>
