--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="apple-touch-icon" href="/designs/icon_64.png" />
 		<!---->
 		<link rel="stylesheet" href="css/mobile.css" />
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/angular/angular.min.js"></script>
 		<script src="js/angular/angular-resource.min.js"></script>
