--- a/admin/calendar.html
+++ b/admin/calendar.html
@@ -16,7 +16,7 @@
 //	});
 
 
-const SERVER_URL = "http://"+location.host+"/";
+const SERVER_URL = "//"+location.host+"/";
 const SERVER_APIURL = SERVER_URL+"api/1.3/";
 
 $(document).ready(function() {
