--- a/signage.html
+++ b/signage.html
@@ -15,15 +15,21 @@
 	<body ng-app="SignageApp" ng-controller="TimetableCtrl" ng-init="routeId = 2;">
 		<header>
 			<div>
-				{{route.arrivalLocation}}&nbsp;&nbsp;行
+				<span class="hide-in-maintenance">{{route.arrivalLocation}}&nbsp;&nbsp;行</span>&nbsp;
 			</div>
 		</header>
-		<div class="message">
+		<div class="message-maintenance" ng-hide="isWorking">
+			<p>
+				調整中<br/>
+				<small>Under maintenance</small>
+			</p>
+		</div>
+		<div class="message hide-in-maintenance">
 			<span class="end-day" auto-resize ng-show="buses == null || buses.length == 0">
 				本日の営業は<br/>終了しました
 			</span>
 		</div>
-		<ul class="content">
+		<ul class="content hide-in-maintenance">
 			<li class="next-dia" ng-show="nextBus != null">
 				<p auto-resize="nextBus.remainDateStr" style="width: auto; display: block; position: relative;">
 					@&nbsp;{{nextBus.remainDateStr}} <span class="note">{{nextBus.note | substring:0:1}}</span>
