Add: フッターにリンクを追加

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<!---->
 		<footer>
 			<div>
-				by OdenTools &amp; Visual Media Lab.
+				by <a href="https://sites.google.com/site/odentools/" target="_brank">OdenTools</a> &amp; Visual Media Lab.
 			</div>
 		</footer>
 	</body>
