Change: Character size of Twitter link on footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<!---->
 		<footer>
 			<div>
-				by <a href="https://sites.google.com/site/odentools/" target="_brank">OdenTools</a>(<a href="https://twitter.com/oecu_bus" target="_brank">Timetable project</a>) &amp; Visual Media Lab.
+				by <a href="https://sites.google.com/site/odentools/" target="_brank">OdenTools</a><font size="-2">(<a href="https://twitter.com/oecu_bus" target="_brank">Timetable project</a>)</font> &amp; Visual Media Lab.
 			</div>
 		</footer>
 	</body>
