--- a/signage.html
+++ b/signage.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8">
-		<title>スクールバス時刻表</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="css/signage.css" />
-		<script src="js/jquery-1.11.3.min.js"></script>
-		<script src="js/angular/angular.min.js"></script>
-		<script src="js/angular/angular-resource.min.js"></script>
-		<script src="js/angular/auto-resize.js"></script>
-		<script src="js/app/services-diagram.js"></script>
-		<script src="js/app/app-signage.js"></script>
-	</head>
-	<body ng-app="SignageApp" ng-controller="TimetableCtrl" ng-init="routeId = 2;">
-		<header>
-			<div>
-				<span class="hide-in-maintenance">{{route.arrivalLocation}}&nbsp;&nbsp;行</span>&nbsp;
-			</div>
-		</header>
-		<div class="message-maintenance" ng-hide="isWorking">
-			<p>
-				調整中<br/>
-				<small>Under maintenance</small>
-			</p>
+
+<head>
+	<meta charset="utf-8">
+	<title>スクールバス時刻表</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="css/signage.css" / type="text/css">
+	<link rel="stylesheet" href="css/message.css" / type="text/css">
+	<script src="js/jquery-1.11.3.min.js"></script>
+	<script src="js/angular/angular.min.js"></script>
+	<script src="js/angular/angular-resource.min.js"></script>
+	<script src="js/angular/auto-resize.js"></script>
+	<script src="js/app/services-diagram.js"></script>
+	<script src="js/app/app-signage.js"></script>
+	<script src="js/reload.js"></script.
+</head>
+
+<body ng-app="SignageApp" ng-controller="TimetableCtrl" ng-init="routeId = 2;">
+	<header>
+		<div>
+			<span class="hide-in-maintenance">{{route.arrivalLocation}}&nbsp;&nbsp;行</span>&nbsp;
 		</div>
-		<div class="message hide-in-maintenance">
-			<span class="end-day" auto-resize ng-show="buses == null || buses.length == 0">
-				本日の営業は<br/>終了しました
+	</header>
+	<div class="message-maintenance" ng-hide="isWorking">
+		<p>
+			調整中<br/>
+			<small>Under maintenance</small>
+		</p>
+	</div>
+	<div class="message hide-in-maintenance">
+		<span class="end-day" auto-resize ng-show="buses == null || buses.length == 0">
+				<script type="text/javascript" src="js/message.jp"></script>
 			</span>
-		</div>
-		<ul class="content hide-in-maintenance">
-			<li class="next-dia" ng-show="nextBus != null">
-				<p auto-resize="nextBus.remainDateStr" style="width: auto; display: block; position: relative;">
-					@&nbsp;{{nextBus.remainDateStr}} <span class="note">{{nextBus.note | substring:0:1}}</span>
-				</p>
-			</li>
-			<li ng-repeat="bus in buses" ng-show="!bus.isPast">
-				<p ng-show="!bus.isPast">
-					{{bus.departureDate | date:'HH:mm'}}
-					<span class="note">{{bus.note | substring:0:1}}</span>
-				</p>
-			</li>
-		</ul>
-	</body>
+	</div>
+	<ul class="content hide-in-maintenance">
+		<li class="next-dia" ng-show="nextBus != null">
+			<p auto-resize="nextBus.remainDateStr" style="width: auto; display: block; position: relative;">
+				@&nbsp;{{nextBus.remainDateStr}} <span class="note">{{nextBus.note | substring:0:1}}</span>
+			</p>
+		</li>
+		<li ng-repeat="bus in buses" ng-show="!bus.isPast">
+			<p ng-show="!bus.isPast">
+				{{bus.departureDate | date:'HH:mm'}}
+				<span class="note">{{bus.note | substring:0:1}}</span>
+			</p>
+		</li>
+	</ul>
+</body>
+
 </html>
