Change: JavaScript部の大幅書き換え

--- a/signage.html
+++ b/signage.html
@@ -13,7 +13,7 @@
 	<script src="js/angular/auto-resize.js"></script>
 	<script src="js/app/services-diagram.js"></script>
 	<script src="js/app/app-signage.js"></script>
-	<script src="js/reload.js"></script.
+	<script src="js/reload.js"></script>
 </head>
 
 <body ng-app="SignageApp" ng-controller="TimetableCtrl" ng-init="routeId = 2;">
@@ -30,7 +30,7 @@
 	</div>
 	<div class="message hide-in-maintenance">
 		<span class="end-day" auto-resize ng-show="buses == null || buses.length == 0">
-				<script type="text/javascript" src="js/message.jp"></script>
+				<p id="msg"><script type="text/javascript" src="js/messages.js"></script></p>
 			</span>
 	</div>
 	<ul class="content hide-in-maintenance">
